push style changes

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -148,3 +148,17 @@ a.internal {
 .graph>.graph-outer {
   border: 0;
 }
+
+.search>.search-button {
+  background-color: var(--lightgray);
+  
+  p {
+    color: var(--secondary);
+  }
+
+  svg {
+    .search-path {
+      stroke: var(--secondary);
+    }
+  }
+}
