--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -15,7 +15,7 @@
     gap: 2rem;
     top: 0;
     box-sizing: border-box;
-    padding: 2rem 2rem 2rem 2rem;
+    padding: 2rem 2rem 0 2rem;
     margin-right: 2rem;
     display: flex;
     height: 100vh;
@@ -43,6 +43,9 @@
       }
     }
 
+    #explorer-content > ul:last-child {
+      padding-bottom: 2rem;
+    }
     a {
       color: var(--secondary);
       font-weight: 400;
