--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,184 +1,18 @@
-@use "./base.scss";
+@use "./base";
+@use "./index" as *;
+@use "./mixins" as *;
 
-.page > #quartz-body .sidebar {
-  gap: 1.5rem;
-}
-// put your custom CSS here!
-.darkmode {
-  margin: 0;
-}
+// Import component styles
+@use "./components/sidebar";
+@use "./components/typography";
+@use "./components/elements";
 
-.page > #quartz-body {
-  .sidebar.left {
-    background-color: var(--light);
-    border-right: 1px solid var(--lightgray);
-    gap: 2rem;
-    top: 0;
-    box-sizing: border-box;
-    padding: 2rem 2rem 0 2rem;
-    margin-right: 2rem;
-    display: flex;
-    height: 100vh;
-    position: sticky;
-    z-index: 1;
-    grid-area: grid-sidebar-left;
-    flex-direction: column;
-    // Add these properties to prevent mid-word breaks
-    word-break: normal;
-    overflow-wrap: break-word;
-    hyphens: none;
+// Any additional custom styles that don't fit in components
 
-    .page-title {
-      font-size: 1.3rem;
-      font-weight: 600;
-      letter-spacing: -0.01em;
-      color: var(--dark);
-
-      &:after {
-        content: ".garden";
-        display: inline;
-        font-size: 1.3rem;
-        color: var(--tertiary);
-        font-weight: 400;
-      }
-    }
-
-    #explorer-content > ul:last-child {
-      padding-bottom: 2rem;
-    }
-    a {
-      color: var(--secondary);
-      font-weight: 400;
-
-      &:hover {
-        color: var(--dark);
-      }
-    }
-
-    .search {
-      .search-button {
-      }
-    }
-
-    .darkmode {
-    }
-
-    .explorer {
-      button {
-      }
-
-      .folder-outer {
-        ul {
-        }
-
-        a {
-        }
-      }
-    }
-
-    @media all and (max-width: 960px) {
-      gap: 1rem;
-      padding: 1rem;
-
-      .page-title {
-        margin-bottom: 0;
-      }
-
-      .search {
-        margin: 0 1rem;
-      }
-    }
-  }
-}
-
-[saved-theme="dark"] .page > #quartz-body .sidebar.left {
-  background-color: var(--light);
-  border-right: 1px solid var(--lightgray);
-}
-
-.article-title {
-  margin-bottom: 1rem;
-}
-
-button#explorer {
-  display: none;
-}
-
-.graph h3 {
-  display: none;
-}
-
-.tags {
-  justify-self: start;
-}
-
-// Add global rules to prevent mid-word breaks
-p,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  word-break: normal;
-  overflow-wrap: break-word;
-  hyphens: auto;
-}
-
-@media (max-width: 960px) {
-  .page > #quartz-body .sidebar.left .search {
-    margin: 0;
-  }
-}
-
-@media (max-width: 800px) {
-  .page > #quartz-body .sidebar.left {
-    height: auto;
-    flex-direction: row;
-    padding-left: 0;
-    padding-right: 0;
-    margin-right: 0;
-    border-right: none;
-  }
-}
-
-a {
-  color: var(--dark);
-  font-weight: 500;
-}
-
-a.internal {
-  border-radius: 0;
-}
-
-.graph > .graph-outer {
-  border: 0;
-}
-
-.search > .search-button {
-  background-color: var(--lightgray);
-
-  p {
+.page-title {
+  .garden {
+    // Add your custom styles for .garden here
     color: var(--secondary);
+    font-weight: normal;
   }
-
-  svg {
-    .search-path {
-      stroke: var(--secondary);
-    }
-  }
-}
-
-a:active {
-  color: var(--darkgray);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 500;
 }
