--- a/quartz/styles/_mixins.scss
+++ b/quartz/styles/_mixins.scss
@@ -1,7 +1,9 @@
 @mixin prevent-word-breaks {
-  word-break: normal;
-  overflow-wrap: break-word;
-  hyphens: none;
+  & {
+    word-break: normal;
+    overflow-wrap: break-word;
+    hyphens: none;
+  }
 }
 
 @mixin mobile {
@@ -31,5 +33,13 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12);
   } @else if $level == 2 {
     box-shadow: 0 3px 6px rgba(0,0,0,0.15);
+  }
+}
+
+@mixin text-overflow {
+  & {
+    word-break: normal;
+    overflow-wrap: break-word;
+    hyphens: none;
   }
 }
