--- a/quartz/styles/variables.scss
+++ b/quartz/styles/variables.scss
@@ -55,3 +55,10 @@ $desktopGrid: (
       "grid-sidebar-left grid-center grid-sidebar-right"\
       "grid-sidebar-left grid-footer grid-sidebar-right"',
 );
+
+// Monokai Pro Accent Colors
+$pink: #FF6188;
+$green: #A9DC76;
+$yellow: #FFD866;
+$blue: #78DCE8;
+$purple: #AB9DF2;
