--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -173,20 +173,25 @@ a {
     }
 
     @media all and not ($desktop) {
-      padding: 0 1rem;
+      padding: 0 auto;
     }
     @media all and ($mobile) {
       margin: 0 auto;
     }
 
     & .sidebar {
-      gap: 2rem;
+      position: sticky;
       top: 0;
       box-sizing: border-box;
       padding: $topSpacing 2rem 2rem 2rem;
       display: flex;
-      height: 100vh;
-      position: sticky;
+      gap: 0;
+      @media (min-width: 800px) {
+        height: 100vh;
+      }
+      @media (max-width: 800px) {
+        height: auto;
+      }
     }
 
     & .sidebar.left {
@@ -200,7 +205,7 @@ a {
         display: flex;
         height: unset;
         flex-direction: row;
-        padding: 0;
+        padding: 2rem;
         padding-top: 2rem;
       }
     }
@@ -217,10 +222,9 @@ a {
         position: initial;
         height: unset;
         width: 100%;
-        flex-direction: row;
-        padding: 0;
+        flex-direction: column;
+        padding: 2rem;
         & > * {
-          flex: 1;
         }
         & > .toc {
           display: none;
@@ -251,16 +255,19 @@ a {
 
     & .center,
     & footer {
-      max-width: 100%;
-      min-width: 100%;
       margin-left: auto;
       margin-right: auto;
       @media all and ($tablet) {
         margin-right: 0;
+        padding-right: 2em;
+        width: auto;
       }
       @media all and ($mobile) {
+        padding-right: 2rem;
+        padding-left: 2rem;
         margin-right: 0;
         margin-left: 0;
+        width: auto;
       }
     }
     & footer {
@@ -588,4 +595,14 @@ iframe.pdf {
   width: 100%;
   border-radius: 5px;
 }
- 
+
+// Add this near other header styles
+.header-title {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+
+  h1 {
+    margin: 0;
+  }
+}
