--- a/quartz/styles/components/_sidebar.scss
+++ b/quartz/styles/components/_sidebar.scss
@@ -1,25 +1,57 @@
 @use "../index" as *;
 @use "../mixins" as *;
+@use "../variables.scss" as *; // Add this import at the top of the file
 
 .page > #quartz-body {
   .sidebar {
     gap: 1.5rem;
+    .folder {
+      > a,
+      > .folder-outer > a {
+        display: block;
+        padding: 2px 8px;
+        margin: 2px 0;
+        border-radius: 4px;
+        transition: all 0.2s ease;
+
+        &:hover {
+          background: var(--subtle);
+        }
+      }
+
+      &.active-page {
+        > a,
+        > .folder-outer > a {
+          color: var(--primary);
+          font-weight: 500;
+          background: var(--subtle);
+        }
+      }
+    }
   }
 
   .sidebar.left {
     background-color: var(--light);
-    border-right: 1px solid var(--lightgray);
-    gap: 2rem;
+    gap: 0;
     top: 0;
     box-sizing: border-box;
-    padding: $sidebar-padding-desktop $sidebar-padding-desktop 0 $sidebar-padding-desktop;
-    margin-right: 2rem;
+    padding: 0;
     display: flex;
-    height: 100vh;
     position: sticky;
     z-index: 1;
     grid-area: grid-sidebar-left;
-    flex-direction: column;
+    @media all and (min-width: 801px) {
+      border-right: 1px solid var(--lightgray);
+      flex-direction: column;
+      margin-right: 2rem;
+    }
+    @media all and (max-width: 800px) {
+      border-bottom: 1px solid var(--lightgray);
+      flex-direction: row;
+      margin-right: 0rem;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+    }
     @include prevent-word-breaks;
 
     .title {
