--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -111,7 +111,7 @@ table {
 ul,
 ol {
   li {
-    margin: 0.5rem 0;
+    margin: 0.3rem 0;
     line-height: 1.6;
   }
 }
@@ -128,7 +128,7 @@ ol {
 
   // Learning related tags
   &[data-tag="learning"] {
-    background-color: rgba(147, 51, 234, 0.1) !important;  // Purple
+    background-color: rgba(147, 51, 234, 0.1) !important; // Purple
     color: #9333ea !important;
     &:hover {
       background-color: #9333ea !important;
@@ -137,7 +137,7 @@ ol {
   }
 
   &[data-tag="skills"] {
-    background-color: rgba(236, 72, 153, 0.1) !important;  // Pink
+    background-color: rgba(236, 72, 153, 0.1) !important; // Pink
     color: #ec4899 !important;
     &:hover {
       background-color: #ec4899 !important;
@@ -146,7 +146,7 @@ ol {
   }
 
   &[data-tag="development"] {
-    background-color: rgba(59, 130, 246, 0.1) !important;  // Blue
+    background-color: rgba(59, 130, 246, 0.1) !important; // Blue
     color: #3b82f6 !important;
     &:hover {
       background-color: #3b82f6 !important;
@@ -155,9 +155,7 @@ ol {
   }
 
   // Default tag style
-  &:not([data-tag="learning"],
-        [data-tag="skills"],
-        [data-tag="development"]) {
+  &:not([data-tag="learning"], [data-tag="skills"], [data-tag="development"]) {
     background-color: var(--subtle) !important;
     color: var(--dark) !important;
     &:hover {
