--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -21,7 +21,7 @@
   font-size: 1.25rem;
   font-weight: 600;
   letter-spacing: -0.02em;
-  padding: 2rem;
+  padding: 1.5rem 1rem;
   color: #000;
   width: auto;
   border-bottom: 1px solid var(--lightgray);
