--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -87,6 +87,7 @@ button#explorer {
   & ul {
     list-style: none;
     margin: 0.08rem 0;
+    width: 100%;
     padding: 0;
     transition:
       max-height 0.35s ease,
