--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -55,9 +55,14 @@ button#explorer {
   display: grid;
   grid-template-rows: 0fr;
   transition: grid-template-rows 0.3s ease-in-out;
+  
+  &:not(.open) {
+    display: none;  // Add this line to completely remove from layout when closed
+  }
 }
 
 .folder-outer.open {
+  display: grid;  // Ensure it's displayed when open
   grid-template-rows: 1fr;
 }
 
@@ -133,6 +138,7 @@ svg {
 
   & div > button {
     color: var(--dark);
+    text-transform: uppercase;
     background-color: transparent;
     border: none;
     text-align: left;
