--- a/quartz/styles/tags.scss
+++ b/quartz/styles/tags.scss
@@ -26,8 +26,8 @@
 
 /* Base tag styles */
 .tag-link {
-  border-radius: 2px !important;
-  padding: 2px 8px !important;
+  order-radius: 27px !important;
+  padding: 4px 8px !important;
   font-size: 0.875em !important;
   transition: opacity 0.2s ease !important;
   text-decoration: none !important;
